Creación del componente con la información nutricional de cada apartado del alimento. Cambio del icono y nombre de la aplicación.

--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="icon" href="images/logo.png">
-  <title>Who wants to be a millionaire App w/ OCI, OpenAI, ChatGPT </title>
+  <title>NutriScan</title>
 </head>
 
 <body>
